--- a/src/main/resources/application-yandex.properties
+++ b/src/main/resources/application-yandex.properties
@@ -4,3 +4,5 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
