feat: add download end-point and writing to xlsx format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,16 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 
-csv.config.headers.vk = test1,test2
+#xlsx headers
 csv.config.headers.tg = a,b
+csv.config.headers.vk = test1,test2
+csv.config.headers.yt = a,b
+csv.config.headers.zn = a,b
+
+#xlsx files paths
+csv.config.tg-file = src/main/resources/excel/tg.xlsx
+csv.config.vk-file = src/main/resources/excel/vk.xlsx
+csv.config.yt-file = src/main/resources/excel/yt1.xlsx
+csv.config.zn-file = src/main/resources/excel/zn.xlsx
 
 
