--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,6 @@ csv.config.vk-file = src/main/resources/excel/vk.xlsx
 csv.config.yt-file = src/main/resources/excel/yt1.xlsx
 csv.config.zn-file = src/main/resources/excel/zn.xlsx
 
+#remote api client
+remote.api.client = http://3f73-77-234-219-9.ngrok-free.app
 
