fix: add remote api client prop

--- a/src/main/resources/application-yandex.properties
+++ b/src/main/resources/application-yandex.properties
@@ -18,3 +18,6 @@ csv.config.tg-file = src/main/resources/excel/tg.xlsx
 csv.config.vk-file = src/main/resources/excel/vk.xlsx
 csv.config.yt-file = src/main/resources/excel/yt1.xlsx
 csv.config.zn-file = src/main/resources/excel/zn.xlsx
+
+#remote api client
+remote.api.client = http://3f73-77-234-219-9.ngrok-free.app
